--- a/colorfulnews/src/main/AndroidManifest.xml
+++ b/colorfulnews/src/main/AndroidManifest.xml
@@ -14,12 +14,16 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/BaseAppTheme">
-        <activity android:name=".module.about.AboutActivity"></activity>
+        <activity android:name=".module.news.activity.NewsChannelActivity"></activity>
+        <activity android:name=".module.about.AboutActivity" />
         <activity android:name=".module.photo.PhotoDetailActivity" />
-        <activity android:name=".module.news.NewsDetailActivity" />
+        <activity android:name=".module.news.activity.NewsDetailActivity" />
         <activity android:name=".module.photo.PhotoActivity" />
-        <activity android:name=".module.news.NewsActivity" />
-        <activity android:name=".module.MainActivity">
+        <activity android:name=".module.news.activity.NewsActivity" />
+        <activity
+            android:name=".module.splash.SplashActivity"
+            android:excludeFromRecents="false"
+            android:theme="@style/BaseAppTheme.Trans">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
