--- a/colorfulnews/src/main/AndroidManifest.xml
+++ b/colorfulnews/src/main/AndroidManifest.xml
@@ -9,17 +9,13 @@
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/BaseAppTheme">
-        <activity android:name=".module.news.activity.NewsChannelActivity"></activity>
-        <activity android:name=".module.about.AboutActivity" />
-        <activity android:name=".module.photo.PhotoDetailActivity" />
-        <activity android:name=".module.news.activity.NewsDetailActivity" />
-        <activity android:name=".module.photo.PhotoActivity" />
-        <activity android:name=".module.news.activity.NewsActivity" />
+
         <activity
             android:name=".module.splash.SplashActivity"
             android:excludeFromRecents="false"
@@ -30,6 +26,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity android:name=".module.news.activity.NewsActivity"
+            android:theme="@style/BaseAppTheme.NoTrans"/>
+
+        <activity android:name=".module.news.activity.NewsPhotoDetailActivity" />
+        <activity android:name=".module.news.activity.NewsChannelActivity" />
+        <activity android:name=".module.about.AboutActivity" />
+        <activity android:name=".module.photo.PhotoDetailActivity" />
+        <activity android:name=".module.news.activity.NewsDetailActivity" />
+        <activity android:name=".module.photo.PhotoActivity" />
     </application>
 
 </manifest>
