--- a/colorfulnews/build.gradle
+++ b/colorfulnews/build.gradle
@@ -90,5 +90,6 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:1.1.3@aar'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.yanzhenjie.permission:support:2.0.1'//动态权限申请库
 
 }
