--- a/colorfulnews/src/main/AndroidManifest.xml
+++ b/colorfulnews/src/main/AndroidManifest.xml
@@ -50,8 +50,13 @@
             android:name=".module.about.AboutActivity"
             android:theme="@style/BaseAppTheme.NoTrans"/>
 
-        <activity android:name=".module.photo.PhotoDetailActivity" />
-        <activity android:name=".module.photo.PhotoActivity" />
+        <activity
+            android:name=".module.photo.PhotoActivity"
+            android:theme="@style/BaseAppTheme.NoTrans"/>
+
+        <activity android:name=".module.photo.PhotoDetailActivity"
+            android:theme="@style/BaseAppTheme.NoTrans"/>
+
     </application>
 
 </manifest>
