配置混淆文件

--- a/colorfulnews/src/main/AndroidManifest.xml
+++ b/colorfulnews/src/main/AndroidManifest.xml
@@ -51,10 +51,10 @@
             android:theme="@style/BaseAppTheme.NoTrans"/>
 
         <activity
-            android:name=".module.photo.PhotoActivity"
+            android:name=".module.photo.activity.PhotoActivity"
             android:theme="@style/BaseAppTheme.NoTrans"/>
 
-        <activity android:name=".module.photo.PhotoDetailActivity"
+        <activity android:name=".module.photo.activity.PhotoDetailActivity"
             android:theme="@style/BaseAppTheme.NoTrans"/>
 
     </application>
